--- a/Exercicios-terceira-aula/guessing-game/index.html
+++ b/Exercicios-terceira-aula/guessing-game/index.html
@@ -8,7 +8,7 @@
     <title>guessing game</title>
 </head>
 <body>
-    <h1 class="title">Qual é o personagem?</h1>
+    <h1 class="title">Qual é a personagem?</h1>
 
     <button type="button" id="btn" class="botao">game start</button>
 
